# android_external_dtc

./: Android.bp  BUILD.bazel  METADATA_version.sed  Makefile
fuzzing/: Android.bp  libfdt_fuzzer.c
fuzzing/corpus/: crash-a5b94d95681291f3057eea7f0233c8f1529b2f59  hardy-octopus  header-truncated  header-v-1  header-v0  meson-g12a-sei510-android.dtb  oob_by_one  quirks.dtb
libfdt/: Android.bp  fdt.c  fdt_check.c  fdt_overlay.c  fdt_ro.c
tests/: path_offset.c
