cc_library(
    name = "libfdt",
    srcs = glob([
        "libfdt/*.h",
        "libfdt/*.c",
    ]),
    copts = [
        "-Werror",
        "-Wno-macro-redefined",
        "-Wno-sign-compare",
    ],
    includes = ["libfdt"],
)

COPTS = [
    "-Wall",
    "-Werror",
    "-Wno-sign-compare",
    "-Wno-missing-field-initializers",
    "-Wno-unused-parameter",
]

genrule(
    name = "lexer",
    srcs = [
        "dtc-lexer.l",
        ":parser",
    ],
    outs = ["dtc-lexer.lex.c"],
    cmd = "lex -o$@ $(location dtc-lexer.l)",
)

genrule(
    name = "parser",
    srcs = ["dtc-parser.y"],
    outs = [
        "dtc-parser.c",
        "dtc-parser.h",
    ],
    cmd = """
      bison -b dtc-parser -d $(location dtc-parser.y)
      cp ./*.c $(location dtc-parser.c)
      cp ./*.h $(location dtc-parser.h)
    """,
)

cc_library(
    name = "dtc_gen",
    srcs = [
        ":lexer",
        ":parser",
    ],
    hdrs = glob(["*.h"]),
    copts = COPTS,
    deps = [":libfdt"],
)

UTILS = [
    "util.c",
    "util.h",
    "version_non_gen.h",
]

cc_binary(
    name = "dtc",
    srcs = UTILS + [
        "checks.c",
        "data.c",
        "dtc.c",
        "dtc.h",
        "flattree.c",
        "fstree.c",
        "livetree.c",
        "srcpos.c",
        "srcpos.h",
        "treesource.c",
    ],
    copts = COPTS,
    defines = ["NO_YAML"],
    deps = [
        ":dtc_gen",
        ":libfdt",
    ],
)

cc_binary(
    name = "fdtget",
    srcs = UTILS + [
        "fdtget.c",
    ],
    copts = COPTS,
    defines = ["NO_YAML"],
    deps = [":libfdt"],
)

cc_binary(
    name = "fdtput",
    srcs = UTILS + [
        "fdtput.c",
    ],
    copts = COPTS,
    defines = ["NO_YAML"],
    deps = [":libfdt"],
)

cc_binary(
    name = "fdtdump",
    srcs = UTILS + [
        "fdtdump.c",
    ],
    copts = COPTS,
    defines = ["NO_YAML"],
    deps = [":libfdt"],
)

cc_binary(
    name = "fdtoverlay",
    srcs = UTILS + [
        "fdtoverlay.c",
    ],
    copts = COPTS,
    defines = ["NO_YAML"],
    deps = [":libfdt"],
)
